Vercel frontend not loading

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='aurora_icon.svg') }}">
+    <link rel="icon" type="image/svg+xml" href="static/aurora_icon.svg">
     <title>Aurora</title>
     <style>
         :root {
@@ -243,7 +243,7 @@
 
     <div class="container">
         <h1>
-            <img src="{{ url_for('static', filename='aurora_icon.svg') }}" alt="" class="header-icon">
+            <img src="static/aurora_icon.svg" alt="" class="header-icon">
             Aurora
         </h1>
         <p class="subtitle">Humane PDF to Audio Converter</p>
